--- a/services/nlp_service/alembic.ini
+++ b/services/nlp_service/alembic.ini
@@ -5,10 +5,11 @@ prepend_sys_path = ../..
 version_path_separator = os
 
 [post_write_hooks]
-hooks = black
-black.type = console_exec
-black.entrypoint = black
-black.options = -l 100
+# Post-write hook for formatting with ruff
+hooks = ruff_format
+ruff_format.type = exec
+ruff_format.executable = ../../.venv/bin/ruff
+ruff_format.options = format REVISION_SCRIPT_FILENAME
 
 [loggers]
 keys = root,sqlalchemy,alembic
