--- a/services/spellchecker_service/alembic.ini
+++ b/services/spellchecker_service/alembic.ini
@@ -1,12 +1,57 @@
+# Alembic configuration file for Spellchecker Service
+# Following HuleEdu consolidated best practice template
+
 [alembic]
+# Path to migration scripts
 script_location = alembic
-# Database URL will be dynamically loaded from service configuration in env.py
-# sqlalchemy.url = postgresql+asyncpg://user:pass@localhost:5437/spellchecker
+
+# Template used to generate migration files
+file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
 prepend_sys_path = ../..
 
+# Version location specification
+version_locations = %(here)s/alembic/versions
+
+# Version path separator; As mentioned above, this is the character used to split
+# version_locations. The default within new alembic.ini files is "os", which uses
+# os.pathsep. If this key is omitted entirely, it falls back to the legacy
+# behavior of splitting on spaces and/or commas.
+version_path_separator = :
+
+# Set to 'true' to run the environment during
+# the 'revision' command, regardless of autogenerate
+revision_environment = false
+
+# Set to 'true' to allow .pyc and .pyo files without
+# a source .py file to be detected as revisions in the
+# versions/ directory
+sourceless = false
+
+# Version name generator
+version_name_generator = false
+
+# Max length of characters to apply to the
+# "slug" field
+truncate_slug_length = 40
+
+# The output encoding used when revision files
+# are written from script.py.mako
+output_encoding = utf-8
+
+# Database URL will be set dynamically in env.py from service configuration
+# sqlalchemy.url = driver://user:pass@localhost/dbname
+
+[post_write_hooks]
+# Post-write hook for formatting with ruff  
+hooks = ruff_format
+ruff_format.type = exec
+ruff_format.executable = ../../.venv/bin/ruff
+ruff_format.options = format REVISION_SCRIPT_FILENAME
+
+# Logging configuration
 [loggers]
 keys = root,sqlalchemy,alembic
 
@@ -19,7 +64,7 @@ keys = generic
 [logger_root]
 level = WARN
 handlers = console
-qualname = 
+qualname =
 
 [logger_sqlalchemy]
 level = WARN
@@ -40,6 +85,3 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
-
-# Post-write hook to format files with ruff
-# file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s
