feat: add comprehensive test suite for fine-grained 15-point grade scale with realistic anchor distributions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,6 +158,7 @@ module = [
     "rich.*",       # Rich library for terminal formatting
     "opentelemetry.*",  # OpenTelemetry instrumentation libraries
     "scipy.*",      # SciPy lacks complete type stubs
+    "sklearn.*",    # scikit-learn lacks type stubs
 ]
 ignore_missing_imports = true
 
