refactor: restructure services for production database separation and add development scripts

--- a/env.example
+++ b/env.example
@@ -18,6 +18,16 @@ GOOGLE_PROJECT_ID=your-google-cloud-project-id-here
 OPENROUTER_API_KEY=your-openrouter-api-key-here
 
 # =============================================================================
+# Database Environment Toggle
+# =============================================================================
+HULEEDU_ENVIRONMENT=development  # development | production
+
+# Production Database Configuration (when HULEEDU_ENVIRONMENT=production)
+HULEEDU_PROD_DB_HOST=your-production-db-host
+HULEEDU_PROD_DB_PORT=5432
+HULEEDU_PROD_DB_PASSWORD=your-secure-production-password
+
+# =============================================================================
 # LLM Provider Service Configuration
 # =============================================================================
 LLM_ADMIN_API_KEY=your-llm-admin-api-key-here
