--- a/services/batch_orchestrator_service/Dockerfile
+++ b/services/batch_orchestrator_service/Dockerfile
@@ -1,4 +1,36 @@
-FROM python:3.11-slim
+# Multi-stage build for optimized production image
+FROM python:3.11-slim as builder
+
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PDM_USE_VENV=false
+
+# Install build dependencies (for consistency and future-proofing)
+RUN apt-get update && apt-get install -y \
+    --no-install-recommends \
+    build-essential \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install PDM
+RUN pip install --no-cache-dir pdm
+
+# Set working directory
+WORKDIR /app
+
+# Copy shared local dependencies
+COPY libs/common_core/ /app/libs/common_core/
+COPY libs/huleedu_service_libs/ /app/libs/huleedu_service_libs/
+
+# Copy service files
+COPY services/batch_orchestrator_service/ /app/services/batch_orchestrator_service/
+
+# Switch to service directory and install dependencies
+WORKDIR /app/services/batch_orchestrator_service
+RUN pdm install --prod --frozen-lockfile
+
+# Final runtime stage
+FROM python:3.11-slim as runtime
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
@@ -12,32 +44,29 @@ ENV PYTHONUNBUFFERED=1 \
     CONTENT_SERVICE_URL=http://content_service:8000/v1/content \
     PDM_USE_VENV=false
 
-# Set base WORKDIR for the application
+# Install only runtime dependencies (no build tools)
+RUN apt-get update && apt-get install -y \
+    --no-install-recommends \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install PDM in runtime (needed for pdm run command)
+RUN pip install --no-cache-dir pdm
+
+# Create application directory
 WORKDIR /app
 
-# Install curl for health checks and PDM globally in the image
-RUN apt-get update && apt-get install -y --no-install-recommends curl && \
-    rm -rf /var/lib/apt/lists/* && \
-    pip install --no-cache-dir pdm
+# Copy the built application and dependencies from builder stage
+COPY --from=builder /app /app
 
-# Copy shared local dependencies first
-COPY libs/common_core/ /app/libs/common_core/
-COPY libs/huleedu_service_libs/ /app/libs/huleedu_service_libs/
+# Create user and set permissions
+RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser \
+    && chown -R appuser:appuser /app
 
-# Now, handle the specific service
-COPY services/batch_orchestrator_service/ /app/services/batch_orchestrator_service/
-
-# Set working directory to the service
-WORKDIR /app/services/batch_orchestrator_service
-
-# Install dependencies for the batch_orchestrator_service using its own pyproject.toml
-# Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
-RUN pdm install --prod --frozen-lockfile
-
-RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser
 USER appuser
+WORKDIR /app/services/batch_orchestrator_service
 
 EXPOSE ${PORT}
 
 # Command to run the application from service directory
-CMD ["pdm", "run", "start"] 
+CMD ["pdm", "run", "start"]
