--- a/services/class_management_service/Dockerfile
+++ b/services/class_management_service/Dockerfile
@@ -1,4 +1,36 @@
-FROM python:3.11-slim
+# Multi-stage build for optimized production image
+FROM python:3.11-slim as builder
+
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PDM_USE_VENV=false
+
+# Install build dependencies (for consistency and future-proofing)
+RUN apt-get update && apt-get install -y \
+    --no-install-recommends \
+    build-essential \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install PDM
+RUN pip install --no-cache-dir pdm
+
+# Set working directory
+WORKDIR /app
+
+# Copy shared local dependencies
+COPY libs/common_core/ /app/libs/common_core/
+COPY libs/huleedu_service_libs/ /app/libs/huleedu_service_libs/
+
+# Copy service files
+COPY services/class_management_service/ /app/services/class_management_service/
+
+# Switch to service directory and install dependencies
+WORKDIR /app/services/class_management_service
+RUN pdm install --prod --frozen-lockfile
+
+# Final runtime stage
+FROM python:3.11-slim as runtime
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
@@ -11,34 +43,29 @@ ENV PYTHONUNBUFFERED=1 \
     CLASS_MANAGEMENT_SERVICE_HOST=0.0.0.0 \
     PDM_USE_VENV=false
 
+# Install only runtime dependencies (no build tools)
+RUN apt-get update && apt-get install -y \
+    --no-install-recommends \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install PDM in runtime (needed for pdm run command)
+RUN pip install --no-cache-dir pdm
+
+# Create application directory
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends curl && \
-    rm -rf /var/lib/apt/lists/* && \
-    pip install --no-cache-dir pdm
+# Copy the built application and dependencies from builder stage
+COPY --from=builder /app /app
 
-# Copy shared local dependencies first
-COPY libs/common_core/ /app/libs/common_core/
-COPY libs/huleedu_service_libs/ /app/libs/huleedu_service_libs/
+# Create user and set permissions
+RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser \
+    && chown -R appuser:appuser /app
 
-# Now, handle the specific service
-COPY services/class_management_service/ /app/services/class_management_service/
-
-# Set working directory to the service
-WORKDIR /app/services/class_management_service
-
-# Install dependencies for the class_management_service using its own pyproject.toml
-# Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
-RUN pdm install --prod --frozen-lockfile
-
-# Setup user and permissions. Note: chown needs to be run as root.
-USER root
-RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser && \
-    chown -R appuser:appuser /app
 USER appuser
+WORKDIR /app/services/class_management_service
 
 EXPOSE ${CLASS_MANAGEMENT_SERVICE_PORT}
 
-# Command to run the application from the service directory
+# Command to run the application
 CMD ["pdm", "run", "start"]
-
