--- a/services/cj_assessment_service/Dockerfile
+++ b/services/cj_assessment_service/Dockerfile
@@ -35,6 +35,7 @@ WORKDIR /app/services/cj_assessment_service
 # Install dependencies for the cj_assessment_service using its own pyproject.toml
 # PDM will use the overrides to find local dependencies at the correct paths
 # Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
+COPY pdm.lock /app/services/cj_assessment_service/pdm.lock
 RUN pdm install --prod --frozen-lockfile
 
 RUN groupadd -r cjassessment && useradd --no-log-init -r -g cjassessment cjassessment \
