--- a/services/llm_provider_service/Dockerfile
+++ b/services/llm_provider_service/Dockerfile
@@ -32,6 +32,7 @@ WORKDIR /app/services/llm_provider_service
 # Install dependencies for the llm_provider_service using its own pyproject.toml
 # PDM will use the overrides to find local dependencies at the correct paths
 # Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
+COPY pdm.lock /app/services/llm_provider_service/pdm.lock
 RUN pdm install --prod --frozen-lockfile
 
 RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser && \
