--- a/services/spellchecker_service/Dockerfile
+++ b/services/spellchecker_service/Dockerfile
@@ -31,6 +31,7 @@ WORKDIR /app/services/spellchecker_service
 # Install dependencies for the spellchecker_service using its own pyproject.toml
 # PDM will use the overrides to find local dependencies at the correct paths
 # Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
+COPY pdm.lock /app/services/spellchecker_service/pdm.lock
 RUN pdm install --prod --frozen-lockfile
 
 # Ensure runtime user can write logs/corrections
